@@ -958,6 +958,7 @@ about.text=jEdit is brought to you by\n\
 	Silas Smith\n\
 	Stefan Kost\n\
 	Stefano Maestri\n\
+	Stephen Bartlett\n\
 	Steve Jakob\n\
 	Stuart Barlow\n\
 	Tal Davidson\n\
